# mahjong-seatings-rs

./: .gitignore  Cargo.toml  README.md  README_BUNDLERS.md  README_NODE.md  build.sh
demo/: index.js  package-lock.json  package.json
src/: lib.rs  mahjong_seatings_rs.d.ts  mahjong_seatings_rs_bundlers.js  mahjong_seatings_rs_node.js
